[package]
name = "cueball-manatee-primary-resolver"
version = "0.1.0"
authors = ["Kelly McLaughlin <kelly.mclaughlin@joyent.com>", "Isaac Davis <isaac.davis@joyent.com>"]
edition = "2018"

[dependencies]
cueball = { git = 'https://github.com/joyent/rust-cueball' }
itertools = "0.8.0"
failure = "0.1.5"
futures = "0.1.28"
quickcheck = "0.8.0"
rand = "0.6.4"
serde_json = "1.0.40"
tokio = "0.1.22"
tokio-zookeeper = "0.1.3"
url = "2.1.0"
