[package]
name = "cueball-manatee-primary-resolver"
version = "0.1.0"
authors = ["Kelly McLaughlin <kelly.mclaughlin@joyent.com>", "Isaac Davis <isaac.davis@joyent.com>"]
edition = "2018"

[dependencies]
clap = "2.32"
cueball = { path = '../rust-cueball' }
#cueball = { git = 'https://github.com/joyent/rust-cueball', tag = 'v0.1.0' }
itertools = "0.8.0"
failure = "0.1.5"
futures = "0.1.28"
quickcheck = "0.8.0"
rand = "0.6.4"
serde_json = "1.0.40"
slog = { version = "2.4.1", features = [ "max_level_trace" ] }
slog-bunyan = { git = "https://github.com/slog-rs/bunyan" }
tokio = "0.1.22"
tokio-zookeeper = { git = 'https://github.com/joyent/tokio-zookeeper', branch = "temp-fix"}
url = "2.1.0"

[dev-dependencies]
uuid = { version = "0.8", features = ["v4"] }